6 - traefik/traefik-dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: dashboard
    namespace: kube-system
spec:
    entryPoints:
        - web
    routes:
        - match: Host(`traefik.davidapps.dev`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
          kind: Rule
          services:
              - name: api@internal
                kind: TraefikService
